scss/_base_button.scss
@import 'settings';

// Base button styles
@mixin vf-b-button {
  button {
    @include button-pattern;
    line-height:  $sp-medium;
  }
}

/// mixin for all the buttons
/// there are sensible defaults, but you can
/// override colors as desired
@mixin button-pattern (
  $button-background-color: $color-x-light,
  $button-text-color: $color-dark,
  $button-disabled-background-color: $color-transparent,
  $button-disabled-border-color: $color-mid-light,
  $button-border-color: $color-mid-light,
  $button-hover-background-color: $color-light,
  $button-hover-border-color: $color-mid-light
) {
  @include animation(
    $property: background-color,
    $duration: fast,
    $easing: in
  );
  background-color: $button-background-color;
  border-color: $button-border-color;
  border-radius: .125rem;
  border-style: solid;
  border-width: 1px;
  box-sizing: border-box;
  color: $button-text-color;
  cursor: pointer;
  display: inline-block;
  font-family: unquote($font-base-family);
  font-size: $sp-medium;
  font-smoothing: subpixel-antialiased;
  font-weight: 300;
  line-height: $sp-medium;
  outline: none;
  padding: $sp-small $sp-large;
  text-align: center;
  text-decoration: none;
  width: 100%;

  @media only screen and (min-width: $breakpoint-medium) {
    width: auto;
  }

  &:visited {
    color: $button-text-color;
  }

  &:active,
  &:focus,
  &:hover {
    background-color: $button-hover-background-color;
    border-color: $button-hover-border-color;
    text-decoration: none;
  }

  &:disabled,
  &.is--disabled {
    cursor: not-allowed;
    opacity: .5;

    &:active,
    &:focus,
    &:hover {
      background-color: $button-disabled-background-color;
      border-color: $button-disabled-border-color;
    }
  }

  .p-link--external {
    @include link-svg-icon($button-text-color);
  }
}

